# PicaComic

./: .gitignore  log.sh  pubspec.yaml
.github/workflows/: android.yml
android/: gradle.properties
android/app/: build.gradle
android/app/src/main/cpp/: CMakeLists.txt  pica_curl.c
android/app/src/main/kotlin/com/github/pacalini/pica_comic/: MainActivity.kt  NativeCurl.kt
assets/: translation.json
lib/: base.dart  main.dart
lib/comic_source/built_in/: jm.dart
lib/network/: app_dio.dart  http_client.dart  native_curl.dart
lib/network/hitomi_network/: fetch_data.dart  hitomi_main_network.dart  image.dart  search.dart
lib/network/jm_network/: jm_network.dart
lib/network/nhentai_network/: login.dart  nhentai_main_network.dart
lib/pages/: webview.dart
lib/pages/settings/: app_settings.dart  jm_settings.dart  network_setting.dart  settings_page.dart
